force-app/main/default/objects/Business_Incubation_Grants__c/fields/Sponsorship_Use__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Use__c</fullName>
    <label>Sponsorship Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>