force-app/main/default/objects/Business_Incubation_Grants__c/fields/Start_Date_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Of_Event__c</fullName>
    <label>Start Date Of Event</label>
    <type>Date</type>
</CustomField>