force-app/main/default/objects/Business_Incubation_Grants__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>