force-app/main/default/objects/Business_Incubation_Grants__c/fields/Target_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Target_Demographics__c</fullName>
    <label>Target Demographics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Youth – 18 to 29 (out of school)</fullName>
            </value>
            <value>
                <fullName>New Canadians (all ages)</fullName>
            </value>
            <value>
                <fullName>Women (all ages)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>