force-app/main/default/objects/Business_Incubation_Grants__c/fields/Target_Demographics_If_Other__c.field-meta.xml
<CustomField>
    <fullName>Target_Demographics_If_Other__c</fullName>
    <label>Target Demographics If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>