force-app/main/default/objects/Business_Incubation_Grants__c/fields/Tracking_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Reporting__c</fullName>
    <label>Tracking &amp; Reporting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>