force-app/main/default/objects/Business_Incubation_Grants__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>