force-app/main/default/objects/Business_Incubation_Grants__c/fields/Type_of_Business_Organization__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business_Organization__c</fullName>
    <label>Type of Business Organization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Incubation</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Education Institution</fullName>
            </value>
            <value>
                <fullName>Industry Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>