force-app/main/default/objects/Business_Incubation_Grants__c/fields/Type_of_In_Kind_Support__c.field-meta.xml
<CustomField>
    <fullName>Type_of_In_Kind_Support__c</fullName>
    <label>Type of In-Kind Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Space</fullName>
            </value>
            <value>
                <fullName>Staff Assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>