force-app/main/default/objects/Business_Incubation_Grants__c/fields/Type_of_In_Kind_Support_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Type_of_In_Kind_Support_If_Others__c</fullName>
    <label>Type of In-Kind Support If Others</label>
    <length>50</length>
    <type>Text</type>
</CustomField>