force-app/main/default/objects/Business_Incubation_Grants__c/fields/Work_with_in_Future__c.field-meta.xml
<CustomField>
    <fullName>Work_with_in_Future__c</fullName>
    <label>Work with in Future</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>