force-app/main/default/objects/Business_Incubation_Grants__c/fields/Year_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Application__c</fullName>
    <defaultValue>&quot;2016&quot;</defaultValue>
    <label>Year of Application</label>
    <length>10</length>
    <type>Text</type>
</CustomField>