force-app/main/default/objects/Business_Incubation_Grants__c/fields/Years_in_Operation__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Operation__c</fullName>
    <label>Years in Operation</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>