force-app/main/default/objects/Business_Incubation_Grants__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_ID__c</columns>
    <columns>NAME</columns>
    <columns>Contact_c__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year_of_Application__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Number_of_Queries__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Date_1st_Report__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_BIC</roleAndSubordinates>
    </sharedTo>
</ListView>