force-app/main/default/objects/Business_Incubation_Grants__c/listViews/BIC_Applications_Approved_17.listView-meta.xml
<ListView>
    <fullName>BIC_Applications_Approved_17</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Contact_c__c</columns>
    <columns>Requested_Support__c</columns>
    <columns>Amount_of_Requested_Support__c</columns>
    <columns>Amount_Approved__c</columns>
    <columns>Approved__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Year_of_Application__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>BIC - Applications Approved 2017</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_BIC</roleAndSubordinates>
    </sharedTo>
</ListView>