force-app/main/default/objects/Business_Incubation_Grants__c/listViews/BIC_Event_Reports.listView-meta.xml
<ListView>
    <fullName>BIC_Event_Reports</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Contact_c__c</columns>
    <columns>Approved__c</columns>
    <columns>Reporting_Number_of_Attendees__c</columns>
    <columns>Amount_Approved__c</columns>
    <columns>Year_of_Application__c</columns>
    <columns>Requested_Support__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Requested_Support__c</field>
        <operation>equals</operation>
        <value>Event Sponsorship</value>
    </filters>
    <label>BIC - Event Reports</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_BIC</roleAndSubordinates>
    </sharedTo>
</ListView>